# redhand

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .restyled.yaml  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile-mcss  DoxygenLayout.xml  Makefile  README.md  SECURITY.md  _audio_handler_8cpp.html  _audio_handler_8cpp__incl.dot  _audio_handler_8cpp__incl.map  _audio_handler_8cpp__incl.md5  _audio_handler_8cpp_source.html  _audio_handler_8hpp.html  _audio_handler_8hpp__dep__incl.dot  _audio_handler_8hpp__dep__incl.map  _audio_handler_8hpp__dep__incl.md5  _audio_handler_8hpp__incl.dot  _audio_handler_8hpp__incl.map  _audio_handler_8hpp__incl.md5  _audio_handler_8hpp_source.html  _audio_playback_manager_8cpp.html  _audio_playback_manager_8cpp_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  actor_8hpp.html  all_8hpp.html  all_8hpp__incl.map  all_8hpp__incl.md5  all_8hpp_source.html  annotated.html  annotated.js  annotated_dup.js  build_8sh.html  (+525 more)
.Travis/: build_linux.sh  build_windows.sh
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ccpp.yml  debianRelease.yml  devRelease.yml  docs.yml  latestDebianRelease.yml  stable.yml  stableRelease.yml  uploadAssets.yml
.github/workflows/devRelease/: action.yml
.kdev4/: redhand.kdev4
debian/: changelog  control  copyright  libredhand-dev.install  libredhand-doc.manpages  libredhand.install  rules  watch
debian/source/: options
doc/: conf.py
doc/markdown/: install.md
include/glad/: glad.h
include/redhand/: AudioHandler.hpp  actor.hpp  all.hpp  audio.hpp  complex_world.hpp  engine.hpp  game_object.hpp  helper.hpp  input.hpp  math.hpp  shader.hpp  shaderSource.hpp  texture.hpp  types.hpp  world.hpp
include/redhand/audio/: AudioHandler.hpp
include/redhand/event/: drawing_event.hpp  event.hpp  events.hpp  game_loop_event.hpp  world_switching_event.hpp
include/redhand/glad/: glad.h
logo/: redhand_banner_en.kra
old-testgame/scripts/: build.sh  run.sh
old-testgame/src/: test_objects.cpp  test_world.cpp  test_world.hpp
scripts/: build.sh  build_linux.sh  build_windows.sh  clean.sh  configure_compiler.sh  dependencies.sh  docs.sh  execute.sh  pack.sh  run.sh  setup.sh  testgame.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  (+49 more)
shaders/: advanced1.vert  advanced2.vert  default.frag  default.vert  minimalColorTexture.vert  texture.frag  variableColor.frag
src/: AudioHandler.cpp  actor.cpp  audio.cpp  complex_world.cpp  engine.cpp  engine.hpp  game.cpp  game.hpp  game_object.cpp  game_object.hpp  glad.c  helper.cpp  input.cpp  main.cpp  math.cpp  math.hpp  objects.cpp  objects.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  types.cpp  world.cpp  world.hpp
src/audio/: AudioHandler.cpp  AudioHandler.hpp
src/event/: event.cpp
subprojects/: glfw3.wrap  glib.wrap  stb.wrap
testgame/: CMakeLists.txt
testgame/scripts/: build.sh  execute.sh  run.sh
testgame/src/: game.cpp  game.hpp  main.cpp  test_objects.cpp  test_objects.hpp  test_world.cpp
